<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.movieviews.presentation.ui.activity.detailmovie.viewmodel.DetailMovieActivityViewModelImpl" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.ui.activity.detailmovie.DetailMovieActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="false">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_poster_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_heavy_medium"
                        android:contentDescription="@string/contentDescriptionImage"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/banner" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/wrapper_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_super_small"
                        android:background="@android:color/transparent"
                        android:elevation="@dimen/elevation_small"
                        app:cardCornerRadius="@dimen/radius_medium_small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_poster_movie"
                            android:layout_width="@dimen/space_super_big_medium"
                            android:layout_height="@dimen/space_heavy_xMedium"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@drawable/sample_poster" />

                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_play_video"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_play_circle"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/wrapper_image"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_movie"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_super_small"
                    android:textAlignment="center"
                    android:textSize="@dimen/space_text_super_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_desc_overview"
                    app:layout_constraintStart_toStartOf="@+id/tv_tagline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="The Walking Dead (2010)" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_score_film"
                    style="@style/TextViewRegular"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:textSize="@dimen/space_text_large_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title_movie"
                    app:layout_constraintStart_toStartOf="@+id/tv_title_movie"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_movie"
                    tools:text="User Score : 8.1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_certification"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_medium"
                    android:textSize="@dimen/space_text_large_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_score_film"
                    app:layout_constraintStart_toStartOf="@+id/tv_score_film"
                    app:layout_constraintTop_toBottomOf="@+id/tv_score_film"
                    tools:text="19 * 52m" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_genre"
                    style="@style/TextViewRegular"
                    android:layout_marginTop="@dimen/space_medium"
                    android:textSize="@dimen/space_text_large_medium"
                    app:layout_constraintEnd_toEndOf="@+id/tv_movie_certification"
                    app:layout_constraintStart_toStartOf="@+id/tv_movie_certification"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_certification"
                    tools:text="Drama, Crime, Mystery, Sci-Fi" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_tagline"
                    style="@style/TextViewRegular"
                    android:layout_marginStart="@dimen/space_super_small"
                    android:layout_marginTop="@dimen/space_super_small"
                    android:textSize="@dimen/space_text_super_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                    tools:text="The Multiverse unleashed." />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:textSize="@dimen/space_text_super_small"
                    app:layout_constraintStart_toStartOf="@+id/tv_tagline"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
                    tools:text="OverView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_desc_overview"
                    style="@style/TextViewMatchParentWrap"
                    android:layout_marginStart="@dimen/space_super_small"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:layout_marginEnd="@dimen/space_medium_large"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/space_text_large_medium"
                    app:layout_constraintStart_toStartOf="@+id/tv_overview"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                    tools:text="@string/overview_movie" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_top_billed_cast"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:textSize="@dimen/space_text_super_small"
                    app:layout_constraintStart_toStartOf="@+id/tv_overview"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_overview"
                    tools:text="Top Billed cast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_billed_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/space_medium_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_top_billed_cast"
                    tools:itemCount="5"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_review"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginStart="@dimen/space_super_small"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:text="@string/title_review"
                    app:layout_constraintLeft_toLeftOf="@+id/rv_billed_cast"
                    app:layout_constraintTop_toBottomOf="@+id/rv_billed_cast" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_see_more"
                    style="@style/TextViewBold_Dark"
                    android:layout_marginTop="@dimen/space_medium_large"
                    android:layout_marginEnd="@dimen/space_super_small"
                    android:text="@string/see_all_review"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_billed_cast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_review_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    android:padding="@dimen/space_medium_large"
                    app:layout_constraintEnd_toEndOf="@+id/tv_review"
                    app:layout_constraintStart_toStartOf="@+id/tv_review"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_view_review" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>