...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_poster_home"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_heavy"
                        android:contentDescription="@string/contentDescriptionImage"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_popular"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_popular_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
...
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_top_rated_movie"
                        app:layout_constraintTop_toBottomOf="@+id/rv_popular_movie" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_top_rated_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
...
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_trending_movie"
                        app:layout_constraintTop_toBottomOf="@+id/rv_top_rated_movie" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_trending_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
...
                        android:textSize="@dimen/space_text_super_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tv_upcoming_movie"
                        app:layout_constraintTop_toBottomOf="@+id/rv_trending_movie" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_upcoming_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:padding="@dimen/space_medium_large"
...
