<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie"/>

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tvShow"/>
</menu>